Add the XML documentation file for debug as well.

--- a/MadMilkman.Ini/MadMilkman.Ini.csproj
+++ b/MadMilkman.Ini/MadMilkman.Ini.csproj
@@ -9,6 +9,10 @@
     <DocumentationFile>MadMilkman.Ini.xml</DocumentationFile>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>MadMilkman.Ini.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <Content Include="Properties\MadMilkman.Ini.png" />
     <Content Include="IniInternal\SharedDocumentationComments.xml" />
