Change description to state that it's a fork + add changelog.

--- a/MadMilkman.Ini/MadMilkman.Ini.csproj
+++ b/MadMilkman.Ini/MadMilkman.Ini.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>2.0</Version>
+    <Description>MadMilkman.Ini, built for .NET Standard 2.0. This is a fork of the original source.</Description>
+    <Product>MadMilkman.Ini fork built for .NET Standard</Product>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
